--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,30 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
+@import './default.scss';
 @import './nav-bar.scss';
-
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-size: 16px;
-  font-family: 'Karla', sans-serif;
-}
-
-a {
-  color: hsl(0, 0%, 98%);
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 400;
-}
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
