--- a/src/scss/nav-bar.scss
+++ b/src/scss/nav-bar.scss
@@ -1,21 +1,49 @@
-.navbar {
+.nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 24px;
-}
 
-.dropdown-btn {
-  height: 32px;
-  width: 32px;
-  background-image: url(./images/icon-hamburger.svg);
-  background-size: cover;
-  border: none;
-  font-size: 0;
-}
+  &__dropdown {
+    display: inline-block;
+  }
 
-.dropdown {
-  display: inline-block;
+  &__btn {
+    height: 32px;
+    width: 32px;
+    background-image: url(./images/icon-hamburger.svg);
+    background-size: cover;
+    border: none;
+    font-size: 0;
+  }
+
+  &__nav-link {
+    margin: 10px 10% 0 10%;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:first-of-type {
+      margin: 20px 25px 0 25px;
+    }
+
+    &:last-of-type {
+      margin-bottom: 40px;
+    }
+
+    &__hyper {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &--active {
+      border: solid 1px hsl(0, 0%, 98%);
+    }
+  }
 }
 
 nav {
@@ -28,45 +56,11 @@ nav {
   text-align: center;
   background-color: hsl(270, 9%, 17%);
   overflow: hidden;
-  transition: 0.5s;
+  transition: height 0.5s;
 
   &:last-child {
     &::after {
       content: url(./images/bg-pattern-mobile-nav.svg);
     }
-  }
-}
-
-.nav-link-wrapper {
-  margin: 10px 10% 0 10%;
-  height: 35px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  &:first-of-type {
-    margin: 20px 25px 0 25px;
-  }
-
-  &:last-of-type {
-    border: solid 1px hsl(0, 0%, 98%);
-    margin-bottom: 40px;
-  }
-
-  a {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-@keyframes appear {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
   }
 }
