--- a/src/style.css
+++ b/src/style.css
@@ -1,70 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 24px;
-}
-
-.dropdown-btn {
-  height: 32px;
-  width: 32px;
-  background-image: url(./images/icon-hamburger.svg);
-  background-size: cover;
-  border: none;
-  font-size: 0;
-}
-
-.dropdown {
-  display: inline-block;
-}
-
-nav {
-  height: 0%;
-  width: 100%;
-  position: absolute;
-  top: 80px;
-  left: 0;
-  z-index: 1;
-  text-align: center;
-  background-color: #2b272f;
-  overflow: hidden;
-  transition: 0.5s;
-}
-nav:last-child::after {
-  content: url(./images/bg-pattern-mobile-nav.svg);
-}
-
-.nav-link-wrapper {
-  margin: 10px 10% 0 10%;
-  height: 35px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.nav-link-wrapper:first-of-type {
-  margin: 20px 25px 0 25px;
-}
-.nav-link-wrapper:last-of-type {
-  border: solid 1px #fafafa;
-  margin-bottom: 40px;
-}
-.nav-link-wrapper a {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@keyframes appear {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 *,
 *::before,
 *::after {
@@ -92,6 +26,63 @@ a {
 
 .attribution a {
   color: #3e52a3;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px;
+}
+.nav-bar__dropdown {
+  display: inline-block;
+}
+.nav-bar__btn {
+  height: 32px;
+  width: 32px;
+  background-image: url(./images/icon-hamburger.svg);
+  background-size: cover;
+  border: none;
+  font-size: 0;
+}
+.nav-bar__nav-link {
+  margin: 10px 10% 0 10%;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-bar__nav-link:first-of-type {
+  margin: 20px 25px 0 25px;
+}
+.nav-bar__nav-link:last-of-type {
+  margin-bottom: 40px;
+}
+.nav-bar__nav-link__hyper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-bar__nav-link--active {
+  border: solid 1px #fafafa;
+}
+
+nav {
+  height: 0%;
+  width: 100%;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  z-index: 1;
+  text-align: center;
+  background-color: #2b272f;
+  overflow: hidden;
+  transition: height 0.5s;
+}
+nav:last-child::after {
+  content: url(./images/bg-pattern-mobile-nav.svg);
 }
 
 /*# sourceMappingURL=style.css.map */
