--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,3 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
 @import './default.scss';
 @import './nav-bar.scss';
+@import './intro.scss';
