--- a/src/scss/nav-bar.scss
+++ b/src/scss/nav-bar.scss
@@ -3,64 +3,110 @@
   justify-content: space-between;
   align-items: center;
   padding: 24px;
+  position: relative;
+  z-index: 1;
 
-  &__dropdown {
-    display: inline-block;
+  // this prevents nav menu from covering nav bar
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: -1;
   }
 
   &__btn {
-    height: 32px;
-    width: 32px;
-    background-image: url(./images/icon-hamburger.svg);
-    background-size: cover;
-    border: none;
-    font-size: 0;
-  }
-
-  &__nav-link {
-    margin: 10px 10% 0 10%;
-    height: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    height: 32px;
+    width: 32px;
+    border: solid 1px black;
+    background-color: transparent;
+    transition: all 0.5 ease-in-out;
 
-    &:first-of-type {
-      margin: 20px 25px 0 25px;
+    &.open .nav-bar__burger {
+      transform: translateX(-32px);
+      background: transparent;
+
+      &::before {
+        transform: rotate(45deg) translate(23px, -23px);
+      }
+
+      &::after {
+        transform: rotate(-45deg) translate(23px, 23px);
+      }
+    }
+  }
+
+  &__burger {
+    width: 16px;
+    height: 2px;
+    background: black;
+    border-radius: 5px;
+    transition: all 0.5 ease-in-out;
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      width: 16px;
+      height: 2px;
+      background: black;
+      border-radius: 5px;
+      transition: all 0.5 ease-in-out;
     }
 
-    &:last-of-type {
-      margin-bottom: 40px;
+    &::before {
+      transform: translateY(-5px);
     }
+
+    &::after {
+      transform: translateY(5px);
+    }
+  }
+
+  &__nav-menu {
+    height: calc(100vh - 80px);
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: -1;
+    text-align: center;
+    background-image: url(./images/bg-pattern-mobile-nav.svg);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-color: hsl(270, 9%, 17%);
+    overflow: hidden;
+    transform: translateY(-100%);
+    transition: transform ease 0.5s;
+  }
+
+  &__nav-list {
+    padding-top: 20px;
+  }
+
+  &__nav-link {
+    margin: 20px 5% 0 5%;
+    height: 55px;
+    list-style: none;
 
     &__hyper {
       width: 100%;
       height: 100%;
+      font-size: 1.4em;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
     &--active {
-      border: solid 1px hsl(0, 0%, 98%);
-    }
-  }
-}
-
-nav {
-  height: 0%;
-  width: 100%;
-  position: absolute;
-  top: 80px;
-  left: 0;
-  z-index: 1;
-  text-align: center;
-  background-color: hsl(270, 9%, 17%);
-  overflow: hidden;
-  transition: height 0.5s;
-
-  &:last-child {
-    &::after {
-      content: url(./images/bg-pattern-mobile-nav.svg);
+      border: solid 2px hsl(0, 0%, 98%);
     }
   }
 }
