--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,19 @@ body {
   font-family: "Karla", sans-serif;
 }
 
+main {
+  display: grid;
+}
+
 a {
   color: #fafafa;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 400;
+}
+
+.family-img {
+  margin: 0 auto;
 }
 
 .attribution {
@@ -33,56 +41,109 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 24px;
+  position: relative;
+  z-index: 1;
 }
-.nav-bar__dropdown {
-  display: inline-block;
+.nav-bar::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: -1;
 }
 .nav-bar__btn {
-  height: 32px;
-  width: 32px;
-  background-image: url(./images/icon-hamburger.svg);
-  background-size: cover;
-  border: none;
-  font-size: 0;
-}
-.nav-bar__nav-link {
-  margin: 10px 10% 0 10%;
-  height: 35px;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  height: 32px;
+  width: 32px;
+  border: solid 1px black;
+  background-color: transparent;
+  transition: all 0.5 ease-in-out;
 }
-.nav-bar__nav-link:first-of-type {
-  margin: 20px 25px 0 25px;
+.nav-bar__btn.open .nav-bar__burger {
+  transform: translateX(-32px);
+  background: transparent;
 }
-.nav-bar__nav-link:last-of-type {
-  margin-bottom: 40px;
+.nav-bar__btn.open .nav-bar__burger::before {
+  transform: rotate(45deg) translate(23px, -23px);
+}
+.nav-bar__btn.open .nav-bar__burger::after {
+  transform: rotate(-45deg) translate(23px, 23px);
+}
+.nav-bar__burger {
+  width: 16px;
+  height: 2px;
+  background: black;
+  border-radius: 5px;
+  transition: all 0.5 ease-in-out;
+}
+.nav-bar__burger::before, .nav-bar__burger::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 2px;
+  background: black;
+  border-radius: 5px;
+  transition: all 0.5 ease-in-out;
+}
+.nav-bar__burger::before {
+  transform: translateY(-5px);
+}
+.nav-bar__burger::after {
+  transform: translateY(5px);
+}
+.nav-bar__nav-menu {
+  height: calc(100vh - 80px);
+  width: 100%;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: -1;
+  text-align: center;
+  background-image: url(./images/bg-pattern-mobile-nav.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-color: #2b272f;
+  overflow: hidden;
+  transform: translateY(-100%);
+  transition: transform ease 0.5s;
+}
+.nav-bar__nav-list {
+  padding-top: 20px;
+}
+.nav-bar__nav-link {
+  margin: 20px 5% 0 5%;
+  height: 55px;
+  list-style: none;
 }
 .nav-bar__nav-link__hyper {
   width: 100%;
   height: 100%;
+  font-size: 1.4em;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .nav-bar__nav-link--active {
-  border: solid 1px #fafafa;
+  border: solid 2px #fafafa;
 }
 
-nav {
-  height: 0%;
-  width: 100%;
-  position: absolute;
-  top: 80px;
-  left: 0;
-  z-index: 1;
-  text-align: center;
-  background-color: #2b272f;
-  overflow: hidden;
-  transition: height 0.5s;
+.intro {
+  height: 500px;
+  padding: 100px 30px;
+  background-color: #2d2640;
+  position: relative;
 }
-nav:last-child::after {
-  content: url(./images/bg-pattern-mobile-nav.svg);
+.intro::before {
+  content: url(./images/bg-pattern-intro-left-mobile.svg);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
