--- a/src/scss/nav-bar.scss
+++ b/src/scss/nav-bar.scss
@@ -27,7 +27,7 @@
     width: 32px;
     border: solid 1px black;
     background-color: transparent;
-    transition: all 0.5 ease-in-out;
+    transition: all 0.3s ease-in-out;
 
     &.open .nav-bar__burger {
       transform: translateX(-32px);
@@ -48,7 +48,7 @@
     height: 2px;
     background: black;
     border-radius: 5px;
-    transition: all 0.5 ease-in-out;
+    transition: all 0.3s ease-in-out;
 
     &::before,
     &::after {
@@ -58,7 +58,7 @@
       height: 2px;
       background: black;
       border-radius: 5px;
-      transition: all 0.5 ease-in-out;
+      transition: all 0.3s ease-in-out;
     }
 
     &::before {
