--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -6,9 +6,14 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-size: 16px;
-  font-family: 'Karla', sans-serif;
+  font-family: 'Karla', sans-serif, 'DM Serif Display', serif;
 }
 
 main {
@@ -16,14 +21,10 @@ main {
 }
 
 a {
-  color: hsl(0, 0%, 98%);
+  color: $very-light-grey;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 400;
-}
-
-.family-img {
-  margin: 0 auto;
 }
 
 .attribution {
