--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+@import './variables.scss';
 @import './default.scss';
 @import './nav-bar.scss';
 @import './intro.scss';
