--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -1,13 +1,51 @@
 .intro {
-  height: 500px;
-  padding: 100px 30px;
-  background-color: hsl(256, 26%, 20%);
   position: relative;
+  height: 500px;
+  padding: 92px 25px;
+  background-color: hsl(256, 26%, 20%);
+  text-align: center;
+  color: $very-light-grey;
 
   &::before {
     content: url(./images/bg-pattern-intro-left-mobile.svg);
     position: absolute;
     top: 0;
     left: 0;
+  }
+
+  &::after {
+    content: url(./images/bg-pattern-intro-right-mobile.svg);
+    position: absolute;
+    bottom: -175px;
+    right: 0;
+  }
+
+  &__title {
+    font-family: 'DM Serif Display', serif;
+    position: relative;
+    z-index: 0;
+    width: 325px;
+    font-size: 2.9em;
+    font-weight: 400;
+    line-height: 1em;
+    padding-bottom: 30px;
+  }
+
+  &__description {
+    font-family: 'Karla', sans-serif; // make reusable btn
+    line-height: 1.5em;
+    padding-bottom: 30px;
+  }
+
+  &__btn {
+    font-family: 'Karla', sans-serif; // make reusable btn
+    font-weight: 700;
+    width: 150px;
+    height: 40px;
+    background: transparent;
+    border-style: none;
+    border: solid 2px $very-light-grey;
+    color: $very-light-grey;
+    text-transform: uppercase;
   }
 }
