--- a/src/scss/nav-bar.scss
+++ b/src/scss/nav-bar.scss
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: $very-light-grey;
     z-index: -1;
   }
 
@@ -25,20 +25,20 @@
     position: relative;
     height: 32px;
     width: 32px;
-    border: solid 1px black;
+    border: solid 1px $dark-violet;
     background-color: transparent;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.1s ease-in-out;
 
     &.open .nav-bar__burger {
-      transform: translateX(-32px);
+      transform: translateX(-1px);
       background: transparent;
 
       &::before {
-        transform: rotate(45deg) translate(23px, -23px);
+        transform: rotate(45deg) translate(1px, -1px);
       }
 
       &::after {
-        transform: rotate(-45deg) translate(23px, 23px);
+        transform: rotate(-45deg) translate(1px, 1px);
       }
     }
   }
@@ -46,7 +46,7 @@
   &__burger {
     width: 16px;
     height: 2px;
-    background: black;
+    background: $very-dark-violet;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
 
@@ -56,7 +56,7 @@
       position: absolute;
       width: 16px;
       height: 2px;
-      background: black;
+      background: $dark-violet;
       border-radius: 5px;
       transition: all 0.3s ease-in-out;
     }
@@ -81,7 +81,7 @@
     background-image: url(./images/bg-pattern-mobile-nav.svg);
     background-repeat: no-repeat;
     background-position: bottom right;
-    background-color: hsl(270, 9%, 17%);
+    background-color: $very-dark-violet;
     overflow: hidden;
     transform: translateY(-100%);
     transition: transform ease 0.5s;
@@ -106,7 +106,7 @@
     }
 
     &--active {
-      border: solid 2px hsl(0, 0%, 98%);
+      border: solid 2px $very-light-grey;
     }
   }
 }
