--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap");
 *,
 *::before,
 *::after {
@@ -7,9 +8,14 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-size: 16px;
-  font-family: "Karla", sans-serif;
+  font-family: "Karla", sans-serif, "DM Serif Display", serif;
 }
 
 main {
@@ -21,10 +27,6 @@ a {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 400;
-}
-
-.family-img {
-  margin: 0 auto;
 }
 
 .attribution {
@@ -51,7 +53,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #fafafa;
   z-index: -1;
 }
 .nav-bar__btn {
@@ -61,24 +63,24 @@ a {
   position: relative;
   height: 32px;
   width: 32px;
-  border: solid 1px black;
+  border: solid 1px #2d2640;
   background-color: transparent;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 .nav-bar__btn.open .nav-bar__burger {
-  transform: translateX(-32px);
+  transform: translateX(-1px);
   background: transparent;
 }
 .nav-bar__btn.open .nav-bar__burger::before {
-  transform: rotate(45deg) translate(23px, -23px);
+  transform: rotate(45deg) translate(1px, -1px);
 }
 .nav-bar__btn.open .nav-bar__burger::after {
-  transform: rotate(-45deg) translate(23px, 23px);
+  transform: rotate(-45deg) translate(1px, 1px);
 }
 .nav-bar__burger {
   width: 16px;
   height: 2px;
-  background: black;
+  background: #2b272f;
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
 }
@@ -87,7 +89,7 @@ a {
   position: absolute;
   width: 16px;
   height: 2px;
-  background: black;
+  background: #2d2640;
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
 }
@@ -134,16 +136,50 @@ a {
 }
 
 .intro {
-  height: 500px;
-  padding: 100px 30px;
-  background-color: #2d2640;
   position: relative;
+  height: 500px;
+  padding: 92px 25px;
+  background-color: #2d2640;
+  text-align: center;
+  color: #fafafa;
 }
 .intro::before {
   content: url(./images/bg-pattern-intro-left-mobile.svg);
   position: absolute;
   top: 0;
   left: 0;
+}
+.intro::after {
+  content: url(./images/bg-pattern-intro-right-mobile.svg);
+  position: absolute;
+  bottom: -175px;
+  right: 0;
+}
+.intro__title {
+  font-family: "DM Serif Display", serif;
+  position: relative;
+  z-index: 0;
+  width: 325px;
+  font-size: 2.9em;
+  font-weight: 400;
+  line-height: 1em;
+  padding-bottom: 30px;
+}
+.intro__description {
+  font-family: "Karla", sans-serif;
+  line-height: 1.5em;
+  padding-bottom: 30px;
+}
+.intro__btn {
+  font-family: "Karla", sans-serif;
+  font-weight: 700;
+  width: 150px;
+  height: 40px;
+  background: transparent;
+  border-style: none;
+  border: solid 2px #fafafa;
+  color: #fafafa;
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=style.css.map */
