--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -24,7 +24,7 @@
     font-family: 'DM Serif Display', serif;
     position: relative;
     z-index: 0;
-    width: 325px;
+    max-width: 325px;
     font-size: 2.9em;
     font-weight: 400;
     line-height: 1em;
