--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,6 @@ main {
 }
 
 a {
-  color: #fafafa;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 400;
@@ -41,10 +40,16 @@ a {
 .nav-bar {
   display: flex;
   justify-content: space-between;
+  width: 100%;
   align-items: center;
   padding: 24px;
   position: relative;
   z-index: 1;
+}
+@media screen and (min-width: 1280px) {
+  .nav-bar {
+    padding: 24px 165px 24px 165px;
+  }
 }
 .nav-bar::after {
   content: "";
@@ -56,6 +61,11 @@ a {
   background-color: #fafafa;
   z-index: -1;
 }
+@media screen and (min-width: 768px) {
+  .nav-bar::after {
+    display: none;
+  }
+}
 .nav-bar__btn {
   display: flex;
   justify-content: center;
@@ -66,6 +76,11 @@ a {
   border: solid 1px #2d2640;
   background-color: transparent;
   transition: all 0.1s ease-in-out;
+}
+@media screen and (min-width: 768px) {
+  .nav-bar__btn {
+    display: none;
+  }
 }
 .nav-bar__btn.open .nav-bar__burger {
   transform: translateX(-1px);
@@ -109,19 +124,54 @@ a {
   text-align: center;
   background-image: url(./images/bg-pattern-mobile-nav.svg);
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: bottom;
   background-color: #2b272f;
   overflow: hidden;
   transform: translateY(-100%);
   transition: transform ease 0.5s;
 }
+@media screen and (min-width: 768px) {
+  .nav-bar__nav-menu {
+    height: auto;
+    position: static;
+    transform: translateY(0);
+    z-index: auto;
+    background: none;
+  }
+}
+.nav-bar__nav-menu.open {
+  transform: translateY(0%);
+}
 .nav-bar__nav-list {
   padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .nav-bar__nav-list {
+    padding-top: 0;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
 }
 .nav-bar__nav-link {
   margin: 20px 5% 0 5%;
+  width: 320px;
   height: 55px;
   list-style: none;
+}
+@media screen and (min-width: 768px) {
+  .nav-bar__nav-link {
+    width: auto;
+    margin: 0 0 0 15px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .nav-bar__nav-link {
+    margin-left: 30px;
+  }
 }
 .nav-bar__nav-link__hyper {
   width: 100%;
@@ -130,9 +180,40 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fafafa;
+}
+@media screen and (min-width: 768px) {
+  .nav-bar__nav-link__hyper {
+    font-size: 1em;
+    font-weight: 700;
+    color: #837d87;
+  }
+  .nav-bar__nav-link__hyper:hover {
+    color: #2b272f;
+  }
 }
 .nav-bar__nav-link--active {
   border: solid 2px #fafafa;
+}
+@media screen and (min-width: 768px) {
+  .nav-bar__nav-link--active {
+    border-color: #2b272f;
+    color: #2b272f;
+    width: 120px;
+  }
+  .nav-bar__nav-link--active .nav-bar__nav-link__hyper {
+    color: #2b272f;
+  }
+  .nav-bar__nav-link--active .nav-bar__nav-link__hyper:hover {
+    background: #2b272f;
+    color: #fafafa;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .nav-bar__nav-link--active {
+    margin: 0 35px;
+    width: 145px;
+  }
 }
 
 .intro {
@@ -159,7 +240,7 @@ a {
   font-family: "DM Serif Display", serif;
   position: relative;
   z-index: 0;
-  width: 325px;
+  max-width: 325px;
   font-size: 2.9em;
   font-weight: 400;
   line-height: 1em;
