add tablet & desktop intro
- move image container to it's own scss file

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -3,4 +3,5 @@
 @import './variables.scss';
 @import './default.scss';
 @import './nav-bar.scss';
+@import './family-photo.scss';
 @import './intro.scss';
