--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -11,6 +11,12 @@ body {
   height: 100%;
 }
 
+#app {
+  position: relative;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 body {
   font-size: 16px;
   font-family: 'Karla', sans-serif, 'DM Serif Display', serif;
@@ -18,6 +24,7 @@ body {
 
 main {
   display: grid;
+  background-color: $dark-violet;
 }
 
 a {
