--- a/src/scss/family-photo.scss
+++ b/src/scss/family-photo.scss
@@ -2,11 +2,12 @@
   position: relative;
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
 
   @media screen and (min-width: 768px) {
     position: absolute;
     right: 25px;
-    padding-top: 150px;
+    padding-top: 125px;
   }
 
   @media screen and (min-width: 1280px) {
