--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -1,7 +1,7 @@
 .intro {
   position: relative;
   height: 500px;
-  padding: 100px 25px;
+  padding: 75px 25px;
   background-color: hsl(256, 26%, 20%);
   text-align: center;
   color: $very-light-grey;
@@ -20,12 +20,17 @@
       width: 330px;
     }
 
+    @media screen and (min-width: 1024px) {
+      height: 330px;
+      width: 440px;
+      margin-left: 150px;
+      margin-top: 50px;
+      text-align: start;
+    }
+
     @media screen and (min-width: 1280px) {
       width: 540px;
-      height: 330px;
-      margin-left: 150px;
       margin-top: 100px;
-      text-align: start;
     }
 
     &::before {
@@ -59,7 +64,7 @@
   &__line {
     @media screen and (min-width: 1280px) {
       position: absolute;
-      top: 150px;
+      top: 125px;
       height: 1px;
       width: 150px;
       background-color: $very-light-grey;
@@ -68,12 +73,10 @@
   }
 
   &__title {
-    font-family: 'DM Serif Display', serif;
     position: relative;
     z-index: 0;
     width: 325px;
     font-size: 2.9em;
-    font-weight: 400;
     line-height: 1em;
     padding-bottom: 30px;
     margin: 0 auto;
@@ -83,10 +86,13 @@
       font-size: 2.4em;
     }
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1024px) {
       margin: 0;
       width: auto;
-      font-size: 3.3em;
+    }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 4.3em;
     }
   }
 
