--- a/src/style.css
+++ b/src/style.css
@@ -13,20 +13,24 @@ body {
   height: 100%;
 }
 
+body {
+  font-size: 16px;
+  font-family: "Karla", sans-serif;
+}
+
 #app {
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
 }
 
-body {
-  font-size: 16px;
-  font-family: "Karla", sans-serif, "DM Serif Display", serif;
-}
-
 main {
   display: grid;
-  background-color: #2d2640;
+}
+
+.heading {
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
 }
 
 a {
@@ -234,12 +238,13 @@ a {
   position: relative;
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
   .img-container {
     position: absolute;
     right: 25px;
-    padding-top: 150px;
+    padding-top: 125px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -291,7 +296,7 @@ a {
 .intro {
   position: relative;
   height: 500px;
-  padding: 100px 25px;
+  padding: 75px 25px;
   background-color: #2d2640;
   text-align: center;
   color: #fafafa;
@@ -312,13 +317,19 @@ a {
     width: 330px;
   }
 }
+@media screen and (min-width: 1024px) {
+  .intro__container {
+    height: 330px;
+    width: 440px;
+    margin-left: 150px;
+    margin-top: 50px;
+    text-align: start;
+  }
+}
 @media screen and (min-width: 1280px) {
   .intro__container {
     width: 540px;
-    height: 330px;
-    margin-left: 150px;
     margin-top: 100px;
-    text-align: start;
   }
 }
 .intro__container::before {
@@ -351,7 +362,7 @@ a {
 @media screen and (min-width: 1280px) {
   .intro__line {
     position: absolute;
-    top: 150px;
+    top: 125px;
     height: 1px;
     width: 150px;
     background-color: #fafafa;
@@ -359,12 +370,10 @@ a {
   }
 }
 .intro__title {
-  font-family: "DM Serif Display", serif;
   position: relative;
   z-index: 0;
   width: 325px;
   font-size: 2.9em;
-  font-weight: 400;
   line-height: 1em;
   padding-bottom: 30px;
   margin: 0 auto;
@@ -375,11 +384,15 @@ a {
     font-size: 2.4em;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1024px) {
   .intro__title {
     margin: 0;
     width: auto;
-    font-size: 3.3em;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .intro__title {
+    font-size: 4.3em;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -404,6 +417,80 @@ a {
   text-transform: uppercase;
   position: relative;
   z-index: 1;
+}
+
+.middle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1280px) {
+  .middle {
+    margin-top: 150px;
+    align-items: flex-start;
+    margin-left: 160px;
+  }
+}
+.middle__title {
+  color: #2b272f;
+  font-size: 3em;
+  margin-top: 180px;
+  margin-bottom: 55px;
+  position: relative;
+}
+@media screen and (min-width: 1280px) {
+  .middle__title {
+    font-size: 4.3em;
+  }
+}
+.middle__title::before {
+  content: "";
+  position: absolute;
+  top: -45px;
+  left: 0;
+  transform: translateX(50%);
+  height: 1px;
+  width: 160px;
+  background: #837d87;
+}
+@media screen and (min-width: 1280px) {
+  .middle__title::before {
+    transform: translateX(0);
+  }
+}
+.middle__card-container {
+  text-align: center;
+}
+@media screen and (min-width: 1280px) {
+  .middle__card-container {
+    display: flex;
+    justify-content: space-between;
+    text-align: initial;
+    width: 1100px;
+  }
+}
+.middle__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 310px;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 1280px) {
+  .middle__card {
+    align-items: flex-start;
+  }
+}
+.middle__card-icon {
+  margin-bottom: 25px;
+}
+.middle__card-title {
+  color: #2b272f;
+  margin-bottom: 10px;
+}
+.middle__card-description {
+  line-height: 1.5em;
+  color: #837d87;
 }
 
 /*# sourceMappingURL=style.css.map */
