add section three
- rename section classes
- rename intro.scss to section-intro.scss
-rename card.scss to section-two.scss
- add default btn class
- add default margin and paddings

--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -31,6 +31,18 @@ main {
   font-weight: 400;
 }
 
+.btn {
+  font-family: 'Karla', sans-serif;
+  font-weight: 700;
+  width: 150px;
+  height: 40px;
+  background: transparent;
+  border-style: none;
+  border: solid 2px $very-light-grey;
+  color: $very-light-grey;
+  text-transform: uppercase;
+}
+
 a {
   text-decoration: none;
   text-transform: uppercase;
