--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -4,5 +4,6 @@
 @import './default.scss';
 @import './nav-bar.scss';
 @import './family-photo.scss';
-@import './intro.scss';
-@import './card.scss';
+@import './section-intro.scss';
+@import './section-two.scss';
+@import './section-three.scss';
