--- a/src/scss/section-two.scss
+++ b/src/scss/section-two.scss
@@ -1,12 +1,16 @@
-.middle {
+.s2 {
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  @media screen and (min-width: 1280px) {
-    margin-top: 150px;
+  @media screen and (min-width: 1024px) {
     align-items: flex-start;
-    margin-left: 160px;
+    padding-left: $default-padding;
+    padding-right: $default-padding;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 150px;
   }
 
   &__title {
@@ -30,20 +34,28 @@
       width: 160px;
       background: $dark-grey-violet;
 
-      @media screen and (min-width: 1280px) {
+      @media screen and (min-width: 1024px) {
         transform: translateX(0);
       }
     }
   }
 
   &__card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    width: 100%;
 
-    @media screen and (min-width: 1280px) {
-      display: flex;
+    @media screen and (min-width: 1024px) {
+      flex-direction: row;
       justify-content: space-between;
+      align-items: flex-start;
       text-align: initial;
-      width: 1100px;
+    }
+
+    @media screen and (min-width: 1440px) {
+      width: 1152px;
     }
   }
 
@@ -54,8 +66,13 @@
     width: 310px;
     padding-bottom: 30px;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1024px) {
       align-items: flex-start;
+      padding-right: 10px;
+
+      &:last-child {
+        padding-right: 0;
+      }
     }
   }
 
@@ -65,6 +82,7 @@
 
   &__card-title {
     color: $very-dark-violet;
+    font-size: 1.5em;
     margin-bottom: 10px;
   }
 
