--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,3 +4,6 @@ $gray-blue: hsl(216, 30%, 68%);
 $very-dark-violet: hsl(270, 9%, 17%);
 $dark-grey-violet: hsl(273, 4%, 51%);
 $very-light-grey: hsl(0, 0%, 98%);
+
+$default-padding: 10%;
+$default-margin: 10%;
