--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,5 @@
 $dark-violet: hsl(256, 26%, 20%);
-$gray-blue: hsl(216, 30%, 68%);
+$grey-blue: hsl(216, 30%, 68%);
 
 $very-dark-violet: hsl(270, 9%, 17%);
 $dark-grey-violet: hsl(273, 4%, 51%);
