--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ main {
 a {
   text-decoration: none;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 .attribution {
@@ -65,14 +65,14 @@ a {
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  padding: 24px;
+  padding: 25px;
   position: relative;
   background: #fafafa;
   z-index: 10;
 }
 @media screen and (min-width: 1024px) {
   .nav-bar {
-    padding: 24px 10%;
+    padding: 25px 10%;
   }
 }
 .nav-bar::after {
@@ -332,20 +332,17 @@ a {
 }
 @media screen and (min-width: 1024px) {
   .intro__container {
-    width: auto;
-    margin-right: calc(10% + 375px + 1em);
+    width: 40%;
     margin-left: 10%;
   }
 }
 @media screen and (min-width: 1280px) {
   .intro__container {
-    margin-right: calc(10% + 440px + 1em);
     margin-top: 100px;
   }
 }
 @media screen and (min-width: 1440px) {
   .intro__container {
-    margin-right: calc(10% + 540px + 1.2em);
     margin-top: 100px;
   }
 }
@@ -599,6 +596,95 @@ a {
     font-size: 3em;
     width: 420px;
   }
+}
+
+footer {
+  padding-top: 5em;
+  padding-left: 25px;
+  padding-right: 25px;
+  background: url(./images/bg-pattern-footer-mobile.svg) no-repeat;
+  background-color: #fafafa;
+}
+@media screen and (min-width: 1024px) {
+  footer {
+    padding: 5em 10%;
+    background: url(./images/bg-pattern-footer-desktop.svg) no-repeat;
+    background-color: #fafafa;
+  }
+}
+
+.footer-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+  position: relative;
+}
+@media screen and (min-width: 1024px) {
+  .footer-top {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.footer-top::after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  background: #d9d9d9;
+  bottom: -40px;
+}
+.footer-top__logo {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1024px) {
+  .footer-top__logo {
+    margin-bottom: 0;
+  }
+}
+.footer-top__icon {
+  margin-right: 15px;
+}
+.footer-top__icon:last-child {
+  margin-right: 0;
+}
+
+.footer-bot {
+  padding-top: 2em;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+@media screen and (min-width: 1024px) {
+  .footer-bot {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.footer-bot__section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2em;
+}
+.footer-bot__section:first-child {
+  margin-top: 0;
+}
+@media screen and (min-width: 1024px) {
+  .footer-bot__section {
+    align-items: flex-start;
+    margin-top: 0;
+  }
+}
+.footer-bot__section-title {
+  padding-bottom: 2em;
+  color: #837d87;
+}
+.footer-bot__link {
+  margin-bottom: 1em;
+  color: #2d2640;
+}
+.footer-bot__link:last-child {
+  margin-bottom: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
