--- a/src/scss/section-two.scss
+++ b/src/scss/section-two.scss
@@ -10,7 +10,7 @@
   }
 
   @media screen and (min-width: 1280px) {
-    padding-top: 150px;
+    padding-top: $default-padding;
   }
 
   &__title {
