--- a/src/scss/family-photo.scss
+++ b/src/scss/family-photo.scss
@@ -5,12 +5,16 @@
 
   @media screen and (min-width: 768px) {
     position: absolute;
-    right: 25px;
+    right: 2%;
     padding-top: $default-padding;
   }
 
   @media screen and (min-width: 1024px) {
     right: $default-margin;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 125px;
   }
 
   &__family-img {
