--- a/src/scss/nav-bar.scss
+++ b/src/scss/nav-bar.scss
@@ -155,6 +155,7 @@
       justify-content: center;
       align-items: center;
       color: $very-light-grey;
+      transition: color ease 0.2s;
 
       @media screen and (min-width: 768px) {
         font-size: 1em;
@@ -162,31 +163,28 @@
         color: $dark-grey-violet;
 
         &:hover {
-          color: $very-dark-violet;
+          color: $dark-violet;
         }
       }
     }
 
     &--active {
       border: solid 2px $very-light-grey;
+      transition: background ease 0.2s, color ease 0.2s;
+
+      &:hover {
+        color: $very-light-grey;
+        background-color: $dark-violet;
+      }
 
       @media screen and (min-width: 768px) {
         border-color: $very-dark-violet;
         color: $very-dark-violet;
         width: 120px;
-
-        .nav-bar__nav-link__hyper {
-          color: $very-dark-violet;
-
-          &:hover {
-            background: $very-dark-violet;
-            color: $very-light-grey;
-          }
-        }
       }
 
       @media screen and (min-width: 1280px) {
-        margin-left: 35px;
+        margin-left: 1em;
         width: 145px;
       }
     }
