--- a/src/style.css
+++ b/src/style.css
@@ -43,17 +43,25 @@ main {
   border: solid 2px #fafafa;
   color: #fafafa;
   text-transform: uppercase;
+  cursor: pointer;
+  transition: background ease 0.2s, color ease 0.2s;
+}
+.btn:hover {
+  background-color: #fafafa;
+  color: #2d2640;
 }
 
 a {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .attribution {
   font-size: 11px;
   text-align: center;
+  margin-top: 5em;
 }
 
 .attribution a {
@@ -211,6 +219,7 @@ a {
   justify-content: center;
   align-items: center;
   color: #fafafa;
+  transition: color ease 0.2s;
 }
 @media screen and (min-width: 768px) {
   .nav-bar__nav-link__hyper {
@@ -219,11 +228,16 @@ a {
     color: #837d87;
   }
   .nav-bar__nav-link__hyper:hover {
-    color: #2b272f;
+    color: #2d2640;
   }
 }
 .nav-bar__nav-link--active {
   border: solid 2px #fafafa;
+  transition: background ease 0.2s, color ease 0.2s;
+}
+.nav-bar__nav-link--active:hover {
+  color: #fafafa;
+  background-color: #2d2640;
 }
 @media screen and (min-width: 768px) {
   .nav-bar__nav-link--active {
@@ -231,17 +245,10 @@ a {
     color: #2b272f;
     width: 120px;
   }
-  .nav-bar__nav-link--active .nav-bar__nav-link__hyper {
-    color: #2b272f;
-  }
-  .nav-bar__nav-link--active .nav-bar__nav-link__hyper:hover {
-    background: #2b272f;
-    color: #fafafa;
-  }
 }
 @media screen and (min-width: 1280px) {
   .nav-bar__nav-link--active {
-    margin-left: 35px;
+    margin-left: 1em;
     width: 145px;
   }
 }
@@ -254,13 +261,18 @@ a {
 @media screen and (min-width: 768px) {
   .img-container {
     position: absolute;
-    right: 25px;
+    right: 2%;
     padding-top: 10%;
   }
 }
 @media screen and (min-width: 1024px) {
   .img-container {
     right: 10%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .img-container {
+    padding-top: 125px;
   }
 }
 .img-container__family-img {
@@ -305,11 +317,7 @@ a {
 @media screen and (min-width: 768px) {
   .intro {
     height: 500px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .intro {
-    padding: 10% 0;
+    padding: 10% 10%;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -327,7 +335,7 @@ a {
   .intro__container {
     align-items: start;
     text-align: start;
-    width: 330px;
+    width: 45%;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -440,7 +448,7 @@ a {
 }
 @media screen and (min-width: 1280px) {
   .s2 {
-    padding-top: 150px;
+    padding-top: 10%;
   }
 }
 .s2__title {
@@ -644,6 +652,11 @@ footer {
 }
 .footer-top__icon {
   margin-right: 15px;
+  cursor: pointer;
+  transition: ease 0.2s;
+}
+.footer-top__icon:hover {
+  filter: brightness(40%);
 }
 .footer-top__icon:last-child {
   margin-right: 0;
@@ -683,8 +696,8 @@ footer {
   margin-bottom: 1em;
   color: #2d2640;
 }
-.footer-bot__link:last-child {
-  margin-bottom: 0;
+.footer-bot__link:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=style.css.map */
