--- a/src/scss/family-photo.scss
+++ b/src/scss/family-photo.scss
@@ -26,7 +26,7 @@
       width: 320px;
     }
 
-    @media screen and (max-width: 414px) {
+    @media screen and (min-width: 414px) {
       width: 414px;
     }
 
