refactor nav menu logic - main.js

--- a/src/scss/nav-bar.scss
+++ b/src/scss/nav-bar.scss
@@ -95,7 +95,7 @@
     text-align: center;
     background-image: url(./images/bg-pattern-mobile-nav.svg);
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: right bottom;
     background-color: $very-dark-violet;
     overflow: hidden;
     transform: translateY(-100%);
