--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -158,7 +158,7 @@ a {
   text-align: center;
   background-image: url(./images/bg-pattern-mobile-nav.svg);
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: right bottom;
   background-color: #2b272f;
   overflow: hidden;
   transform: translateY(-100%);
@@ -544,7 +544,7 @@ a {
   position: relative;
   z-index: 1;
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 414px) {
   .s3 {
     margin: 50px 10px;
   }
