--- a/src/scss/nav-bar.scss
+++ b/src/scss/nav-bar.scss
@@ -36,6 +36,7 @@
     position: relative;
     height: 32px;
     width: 32px;
+    outline: none;
     border: solid 1px $dark-violet;
     background-color: transparent;
     transition: all 0.1s ease-in-out;
